# Claude_CPP_VideoPlayer

./: CMakeLists.txt  Prompts.md  README.md  build.sh  run.sh  runTests.sh
PromptsArchive/: ArchivedPrompts.md
include/: AppSettings.h  AudioEncoder.h  Constants.h  Decoder.h  Demuxer.h  DialogWindow.h  Encoder.h  EncoderSettings.h  EncoderSettingsPanel.h  ExportSettingsDialog.h  ExportVideo.h  FileOperations.h  JsonConstants.h  LockingQueue.h  Logger.h  MainWindow.h  MenuUI.h  Muxer.h  PlayerEvent.h  PlayerUI.h  RecentFiles.h  Renderer.h  VideoEncoder.h  VideoPlayer.h  VideoPlayerConfig.h
libraries/FFmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  swresample.lib  swscale.lib
libraries/SDL/lib/arm64/: SDL3_test.lib
libraries/SDL/lib/x64/: SDL3.lib
libraries/SDL/lib/x86/: SDL3.lib
libraries/Windows/FFmpeg/lib/: avformat.lib  avutil.lib
libraries/Windows/SDL/lib/arm64/: SDL3.lib
libraries/Windows/SDL/lib/x64/: SDL3_test.lib
libraries/Windows/SDL/lib/x86/: SDL3_test.lib
src/: AppSettings.cpp  AudioEncoder.cpp  Decoder.cpp  Demuxer.cpp  DialogWindow.cpp  Encoder.cpp  EncoderSettingsPanel.cpp  ExportSettingsDialog.cpp  ExportVideo.cpp  FileOperations.cpp  LockingQueue.cpp  Logger.cpp  MainWindow.cpp  MenuUI.cpp  Muxer.cpp  PlayerUI.cpp  RecentFiles.cpp  Renderer.cpp  VideoEncoder.cpp  VideoPlayer.cpp  main.cpp
tests/: AudioEncoderTests.cpp  CMakeLists.txt  DecoderTests.cpp  DemuxerTests.cpp  EncoderTests.cpp  FileOperationsTests.cpp  LoggerTests.cpp  MuxerTests.cpp  RendererTests.cpp  TestConstants.h  VideoEncoderTests.cpp  VideoPlayerTests.cpp
